--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:support-v4:24.2.1'
     testCompile 'junit:junit:4.12'
     testCompile 'org.json:json:20140107'
 }
+
 
