added initial alarm based notification when adding new notification, will set the alarm to 10 seconds after adding. Can also cancel notification by deleting it

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".AddNotifierActivity"></activity>
+
+        <receiver android:name=".NotificationPublisher" />
     </application>
 
 </manifest>
