--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,10 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
     testCompile 'org.json:json:20140107'
 }
+
 
 
