--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,9 +18,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddNotifierActivity"></activity>
+        <activity android:name=".AddNotifierActivity" />
 
         <receiver android:name=".NotificationPublisher" />
+
+        <activity
+            android:name=".ViewHourlyForecastActivity"
+            android:label="@string/title_activity_view_hourly_forecast"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
