seems like the receiver for the NotificationPublisher needs to be exported. this makes the receiver available to an outside application (in this case AlarmManager)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         </activity>
         <activity android:name=".AddNotifierActivity" />
 
-        <receiver android:name=".NotificationPublisher" />
+        <receiver android:name=".NotificationPublisher" android:exported="true" />
         <receiver android:name=".OnBootReceiver"
             android:enabled="true">
             <intent-filter>
