--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:allowBackup="true"
@@ -21,7 +22,7 @@
         </activity>
         <activity android:name=".AddNotifierActivity" />
 
-        <receiver android:name=".NotificationPublisher" android:exported="true" />
+        <receiver android:name=".NotificationPublisher"/>
         <receiver android:name=".OnBootReceiver"
             android:enabled="true">
             <intent-filter>
