one of these changes got the alarm and service to work had to up version on sqlite to get this working on phone

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,18 +21,25 @@
             </intent-filter>
         </activity>
         <activity android:name=".AddNotifierActivity" />
+        <activity
+            android:name=".ViewHourlyForecastActivity"
+            android:label="@string/title_activity_view_hourly_forecast"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
-        <receiver android:name=".NotificationPublisher"/>
+        <receiver android:name=".NotificationPublisher">
+
+        </receiver>
         <receiver android:name=".OnBootReceiver"
             android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"></action>
             </intent-filter>
         </receiver>
-        <activity
-            android:name=".ViewHourlyForecastActivity"
-            android:label="@string/title_activity_view_hourly_forecast"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+
+        <service android:name=".WeatherNotificationIntentService">
+
+        </service>
+
     </application>
 
 </manifest>
