reverted some minor format changes to manifest removed setActivity from NotificationPublisher, thought it would help get intentservice running when adding new notifier have all days selected re-added set alarm next day if the alarm time is passed for this day

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,9 +26,7 @@
             android:label="@string/title_activity_view_hourly_forecast"
             android:theme="@style/AppTheme.NoActionBar"></activity>
 
-        <receiver android:name=".NotificationPublisher">
-
-        </receiver>
+        <receiver android:name=".NotificationPublisher"/>
         <receiver android:name=".OnBootReceiver"
             android:enabled="true">
             <intent-filter>
@@ -36,9 +34,7 @@
             </intent-filter>
         </receiver>
 
-        <service android:name=".WeatherNotificationIntentService">
-
-        </service>
+        <service android:name=".WeatherNotificationIntentService" />
 
     </application>
 
