added google sign-in to force user to first sign-in before allowed to use app

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,17 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.3"
+    signingConfigs{
+        key{
+            keyAlias 'jawn'
+            keyPassword 'jawnisnotboring'
+            storeFile file('../jawn.jks')
+            storePassword 'jawnisnotboring'
+        }
+    }
     defaultConfig {
         applicationId "com.miryor.jawn"
         minSdkVersion 15
@@ -15,6 +24,9 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        debug {
+            signingConfig signingConfigs.key
         }
     }
     testOptions {
@@ -30,9 +42,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:design:24.2.1'
+    compile 'com.google.android.gms:play-services-auth:9.0.0'
+
     testCompile 'junit:junit:4.12'
     testCompile 'org.json:json:20140107'
 }
-
-
-
