--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ android {
         }
         debug {
             signingConfig signingConfigs.key
-            buildConfigField "String", "JAWN_REST_URL", '"http://localhost:5000/hourlyForecast"'
+            buildConfigField "String", "JAWN_REST_URL", '"http://10.0.2.2:5000/hourlyForecast"'
             buildConfigField "String", "JAWN_REST_VERSION", '"0.1"'
         }
     }
@@ -46,7 +46,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:design:24.2.1'
-    compile 'com.google.android.gms:play-services-auth:9.0.0'
+    compile 'com.google.android.gms:play-services:9.0.0'
+
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.json:json:20140107'
