--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,19 +47,22 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
-            //proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField "String", "JAWN_REST_URL", '"https://jawn-rest.herokuapp.com/hourlyForecast"'
             //signingConfig signingConfigs.key
         }
         debug {
             //signingConfig signingConfigs.key
-            buildConfigField "String", "JAWN_REST_URL", '"https://jawn-rest.herokuapp.com/hourlyForecast"'
-            //buildConfigField "String", "JAWN_REST_URL", '"http://10.0.2.2:5000/hourlyForecast"'
+            //buildConfigField "String", "JAWN_REST_URL", '"https://jawn-rest.herokuapp.com/hourlyForecast"'
+            buildConfigField "String", "JAWN_REST_URL", '"http://10.0.2.2:5000/hourlyForecast"'
         }
     }
     testOptions {
         unitTests.returnDefaultValues = true
+    }
+    lintOptions {
+        checkReleaseBuilds false
     }
 }
 
